# VirusHostInteractionPredictor

./: .gitignore  LICENSE  README.md  VirusInfectionPredictor_workflow.drawio  example.ipynb  pyproject.toml  requirements.txt  saved_features_test.tsv  setup.py  test_predictions.tsv
.VSCodeCounter/2023-03-27_11-43-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  greet.yml  publish.yml  release.yml  test.yml
VIP/features/: genomes_features.py
VIP/network/: properties.py
VirusInfectionPredictor_project.egg-info/: PKG-INFO  SOURCES.txt
data/: README.md
data/hostrange/: NCBI_hostrange.csv  NahantHR.csv  StaphStudy_edgesHR.tsv
design_documents/: DDS.drawio  SRS_document.md  VIP_SoftwareRequirementsSpecification.md  VIP_features_detailed.drawio  VIP_features_detailed_coloredbystatus.drawio  VirusInfectionPredictor_workflow.drawio  WBS_document.md  datasets.md  overview_diagram.drawio  tech_stack_comp_resources.md  timeline.pptx
example/: example.ipynb  predictions.tsv  predictions5.tsv  test_gene_features_example.ipynb
example/host_genes/: Staphylococcus_arlettae.ffn  Staphylococcus_aureus.ffn  Staphylococcus_auricularis.ffn  Staphylococcus_capitis.ffn  Staphylococcus_caprae.ffn  Staphylococcus_chromogenes.ffn  Staphylococcus_cohnii.ffn  Staphylococcus_epidermidis.ffn  Staphylococcus_equorum.ffn  Staphylococcus_haemolyticus.ffn  Staphylococcus_hominis.ffn  Staphylococcus_hyicus.ffn  Staphylococcus_kloosii.ffn  Staphylococcus_lentus.ffn  Staphylococcus_lugdunensis.ffn  Staphylococcus_nepalensis.ffn  Staphylococcus_pasteuri.ffn  Staphylococcus_pettenkoferi.ffn  Staphylococcus_pseudintermedius.ffn  Staphylococcus_saprophyticus.ffn  Staphylococcus_schleiferi.ffn  Staphylococcus_sciuri.ffn  Staphylococcus_succinus.ffn  Staphylococcus_vitulinus.ffn  Staphylococcus_warneri.ffn  Staphylococcus_xylosus.ffn
example/host_genomes/: Staphylococcus_aureus.fasta  Staphylococcus_auricularis.fasta  Staphylococcus_capitis.fasta  Staphylococcus_caprae.fasta  Staphylococcus_chromogenes.fasta  Staphylococcus_epidermidis.fasta  Staphylococcus_hominis.fasta  Staphylococcus_hyicus.fasta  Staphylococcus_kloosii.fasta  Staphylococcus_lentus.fasta  Staphylococcus_lugdunensis.fasta  Staphylococcus_nepalensis.fasta  Staphylococcus_pasteuri.fasta  Staphylococcus_pseudintermedius.fasta  Staphylococcus_saprophyticus.fasta  Staphylococcus_vitulinus.fasta  Staphylococcus_warneri.fasta  Staphylococcus_xylosus.fasta
example/host_sequences/: Staphylococcus_cohnii.fasta  Staphylococcus_equorum.fasta  Staphylococcus_haemolyticus.fasta  Staphylococcus_schleiferi.fasta  Staphylococcus_sciuri.fasta  Staphylococcus_succinus.fasta
example/virus_genes/: GCA_021090665.1_ASM2109066v1_genomic.ffn  GCA_021090675.1_ASM2109067v1_genomic.ffn  GCA_021090685.1_ASM2109068v1_genomic.ffn  GCA_021090695.1_ASM2109069v1_genomic.ffn  GCA_021090705.1_ASM2109070v1_genomic.ffn  GCA_021090715.1_ASM2109071v1_genomic.ffn  GCA_021090725.1_ASM2109072v1_genomic.ffn  GCA_021090735.1_ASM2109073v1_genomic.ffn  GCA_021090745.1_ASM2109074v1_genomic.ffn  GCA_021090755.1_ASM2109075v1_genomic.ffn  GCA_021090765.1_ASM2109076v1_genomic.ffn  GCA_021090775.1_ASM2109077v1_genomic.ffn  GCA_021090785.1_ASM2109078v1_genomic.ffn  GCA_021090795.1_ASM2109079v1_genomic.ffn  GCA_021090805.1_ASM2109080v1_genomic.ffn  GCA_021090815.1_ASM2109081v1_genomic.ffn  GCA_021090825.1_ASM2109082v1_genomic.ffn  GCA_021090835.1_ASM2109083v1_genomic.ffn  GCA_021090845.1_ASM2109084v1_genomic.ffn  GCA_021090855.1_ASM2109085v1_genomic.ffn  GCA_021090865.1_ASM2109086v1_genomic.ffn  GCA_021090875.1_ASM2109087v1_genomic.ffn  GCA_021090885.1_ASM2109088v1_genomic.ffn  GCA_021090895.1_ASM2109089v1_genomic.ffn  GCA_021090905.1_ASM2109090v1_genomic.ffn  GCA_021090915.1_ASM2109091v1_genomic.ffn  GCA_021090925.1_ASM2109092v1_genomic.ffn  GCA_021090935.1_ASM2109093v1_genomic.ffn  GCA_021090945.1_ASM2109094v1_genomic.ffn  GCA_021090955.1_ASM2109095v1_genomic.ffn  GCA_021090965.1_ASM2109096v1_genomic.ffn  GCA_021090975.1_ASM2109097v1_genomic.ffn  GCA_021090985.1_ASM2109098v1_genomic.ffn  GCA_021090995.1_ASM2109099v1_genomic.ffn  (+6 more)
notebooks/: build_model.ipynb  hyperparameters.ipynb
real_dataset_tutorial/: VIP_output_analysis.Rmd
test_set/: StaphStudy_virusvhosts.tsv
tests/: test_BuildModel.py  test_CodonBiasComparison.py  test_ComputeFeatures.py  test_Gene.py  test_GeneSet  test_GeneSet.py  test_HomologyMatch.py  test_KmerProfile.py  test_PredictInteractions.py  test_d2Distance.py  test_genomes_features.py  test_read_headers.py  test_read_sequence.py  test_read_sequences.py  test_tRNAMetrics.py
tutorials/: example_VirusHost_pairlist.txt  vhip_tutorial.ipynb  vip_tutorial.ipynb
vip/: gbrt.pkl  predict_interactions.py  predict_interactions_v2.py  train_model.py
(+97 files in other folders)
